remplacement des skills associés

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
             Étudiant Cybersécurité @ Ynov Campus<br><br>
             <span style="color: #00ff41;">➜  ~</span> cat skills.txt<br>
             [+] Python Scripting<br>
-            [+] Infrastructure Hardening<br>
-            [+] Threat Hunting (Splunk/ELK)<br>
-            [+] Network Analysis (Wireshark)
+            [+] Infrastructure<br>
+            [+] Infrastructure monitoring<br>
+            [+] Infrastructure security<br>
+            [+] Virtualisation<br>
+            [+] Kali Linux<br>
         </div>
 
     </div>
