ajout d'un projet

--- a/projetcyber.html
+++ b/projetcyber.html
@@ -61,7 +61,7 @@
             <a href="https://github.com/AnisDerriche/projet-infra" target="_blank" class="btn">CODE SOURCE</a>
         </div>
 
-        <div class="project-card highlight-project">
+        <div class="project-card">
             <div class="project-header">
                 <h3>ARCHITECTURE RÉSILIENTE : DRAGON EMOTORS</h3>
                 <span class="status-badge done">DEPLOYED</span>
@@ -90,7 +90,7 @@
 
             <div style="margin-top: 20px;">
                 <span class="tech-tag">Windows Server</span>
-                <span class="tech-tag">Debian</span>
+                <span class="tech-tag">Ubuntu</span>
                 <span class="tech-tag">Samba AD</span>
                 <span class="tech-tag">GPO Hardening</span>
                 <span class="tech-tag">Zabbix</span>
